# swagger_server/controllers/installation_controller.py
@@ -1,16 +1,16 @@
 import connexion
 import six
 
-from swagger_server.models.img import Img  # noqa: E501
+from swagger_server.models.output import Output  # noqa: E501
 from swagger_server import util
 
 
 def ajout_fichier_installation(body, plateforme, fichiers, nom_ia):  # noqa: E501
     """Ajoute un nouveau Modele d&#x27;IA
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
-    :param body: Create a new Img in the store
+    :param body: Create a new Output in the store
     :type body: dict | bytes
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
@@ -19,20 +19,20 @@ def ajout_fichier_installation(body, plateforme, fichiers, nom_ia):  # noqa: E50
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
 
-    :rtype: Img
+    :rtype: Output
     """
     if connexion.request.is_json:
-        body = Img.from_dict(connexion.request.get_json())  # noqa: E501
+        body = Output.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def ajout_fichier_installation(base64, plateforme, fichiers, nom_ia):  # noqa: E501
+def ajout_fichier_installation(output, plateforme, fichiers, nom_ia):  # noqa: E501
     """Ajoute un nouveau Modele d&#x27;IA
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
-    :param base64: 
-    :type base64: str
+    :param output: 
+    :type output: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
     :param fichiers: Un fichier setup.py (si hugging face) ou un fichier shell + requires.txt
@@ -40,7 +40,7 @@ def ajout_fichier_installation(base64, plateforme, fichiers, nom_ia):  # noqa: E
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -48,9 +48,9 @@ def ajout_fichier_installation(base64, plateforme, fichiers, nom_ia):  # noqa: E
 def ajout_fichier_lancement(body, plateforme, fichier, nom_ia):  # noqa: E501
     """Ajoute un fichier d&#x27;installation
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
-    :param body: Create a new Img in the store
+    :param body: Create a new Output in the store
     :type body: dict | bytes
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
@@ -59,20 +59,20 @@ def ajout_fichier_lancement(body, plateforme, fichier, nom_ia):  # noqa: E501
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
 
-    :rtype: Img
+    :rtype: Output
     """
     if connexion.request.is_json:
-        body = Img.from_dict(connexion.request.get_json())  # noqa: E501
+        body = Output.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def ajout_fichier_lancement(base64, plateforme, fichier, nom_ia):  # noqa: E501
+def ajout_fichier_lancement(output, plateforme, fichier, nom_ia):  # noqa: E501
     """Ajoute un fichier d&#x27;installation
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
-    :param base64: 
-    :type base64: str
+    :param output: 
+    :type output: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
     :param fichier: Un fichier inference.py
@@ -80,7 +80,7 @@ def ajout_fichier_lancement(base64, plateforme, fichier, nom_ia):  # noqa: E501
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -88,14 +88,14 @@ def ajout_fichier_lancement(base64, plateforme, fichier, nom_ia):  # noqa: E501
 def get_fichier_installation(nom_ia, plateforme=None):  # noqa: E501
     """Retourne les fichiers d&#x27;installation d&#x27;une IA
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -103,14 +103,14 @@ def get_fichier_installation(nom_ia, plateforme=None):  # noqa: E501
 def get_fichier_lancement(nom_ia, plateforme=None):  # noqa: E501
     """Retourne les fichiers de Generation
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -118,14 +118,14 @@ def get_fichier_lancement(nom_ia, plateforme=None):  # noqa: E501
 def lancement_fichier_installation(nom_ia, plateforme):  # noqa: E501
     """Lancement d&#x27;une installation d&#x27;une IA
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -133,14 +133,14 @@ def lancement_fichier_installation(nom_ia, plateforme):  # noqa: E501
 def suppr_fichier_installation(nom_ia, plateforme):  # noqa: E501
     """Supprime un fichier d&#x27;installation
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
     :param plateforme: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type plateforme: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
 
@@ -148,11 +148,11 @@ def suppr_fichier_installation(nom_ia, plateforme):  # noqa: E501
 def suppr_fichier_lancement(nom_ia):  # noqa: E501
     """Supprime un fichier de Generation
 
-    Add a new Img to the store # noqa: E501
+    Add a new Output to the store # noqa: E501
 
     :param nom_ia: Nom de l&#x27;IA retourné par /IA/trouverParCategorie
     :type nom_ia: str
 
-    :rtype: Img
+    :rtype: Output
     """
     return 'do some magic!'
